--- a/Gateway/Sentio/Sentio.ioc
+++ b/Gateway/Sentio/Sentio.ioc
@@ -48,25 +48,27 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=PB9
-Mcu.Pin15=VP_ADC1_TempSens_Input
-Mcu.Pin16=VP_ADC1_Vref_Input
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM1_VS_indirect_ch3
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_ADC1_TempSens_Input
+Mcu.Pin18=VP_ADC1_Vref_Input
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA1
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM1_VS_indirect_ch3
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
-Mcu.PinsNb=20
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -101,6 +103,14 @@ PA3.Locked=true
 PA3.Signal=GPIO_Input
 PA4.Locked=true
 PA4.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=AUX
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=EN
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
